src/objects/Joint_Coaching_Form__c.object
<CustomObject>
    <description>Used by Sales Team</description>
    <fields>
        <fullName>Call_Report_Quality_from_Salesforce__c</fullName>
        <label>Call Report Quality (from Salesforce)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Name_Senior_School_Official__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Name/Senior School Official</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Joint Coaching Form</relationshipLabel>
        <relationshipName>Joint_Coaching_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Did_RAE_know_others_outside_FA_office__c</fullName>
        <description>Did the RAE know other campus administrators outside of the financial aid office?</description>
        <inlineHelpText>Did the RAE know other campus administrators outside of the financial aid office?</inlineHelpText>
        <label>Did RAE know others outside FA office?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>District_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>District Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Joint_Coaching_Form1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Documented_in_Salesforce__c</fullName>
        <inlineHelpText>Was the meeting appropriately documented in Salesforce?</inlineHelpText>
        <label>Documented in Salesforce</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Up_and_Next_Steps__c</fullName>
        <label>Follow-Up and Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Follow_up_documentation_sent_to_school__c</fullName>
        <inlineHelpText>Was the appropriate follow-up documentation sent to the school?</inlineHelpText>
        <label>Follow-up documentation sent to school?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Go_Forward_Committments__c</fullName>
        <description>At the end of the meeting, did the RAE get customer  &quot;go-forward&quot; committments?</description>
        <inlineHelpText>At the end of the meeting, did the RAE get customer  &quot;go-forward&quot; committments?</inlineHelpText>
        <label>Go-Forward Committments?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_clear_objective_for_the_meeting__c</fullName>
        <label>Have clear objective for the meeting?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identify_the_competitive_environement__c</fullName>
        <label>Identify the competitive environement?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_other_please_specify__c</fullName>
        <label>If other, please specify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_Next_Steps__c</fullName>
        <label>If yes, Next Steps:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Presentation</fullName>
                </value>
                <value>
                    <fullName>Proposal Request</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Learn_first_Pitch_later__c</fullName>
        <description>Did the RAE &quot;learn first&quot; and then &quot;Pitch later&quot;?</description>
        <inlineHelpText>Did the RAE &quot;learn first&quot; and then &quot;Pitch later&quot;?</inlineHelpText>
        <label>Learn first - Pitch later</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Score__c</fullName>
        <formula>Post_Visit_Follow_Up_Overall_Score__c  +  Pre_Call_Planning_Overall_Score__c  +  School_Call_Management_Overall_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This will auto-calculate from the other scores.</inlineHelpText>
        <label>Overall Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Performance_results_follow_up__c</fullName>
        <inlineHelpText>pre-callm, visit and post visit</inlineHelpText>
        <label>Performance results follow-up</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Post_Visit_Follow_Up_Overall_Score__c</fullName>
        <description>Please enter a number from 1-5</description>
        <inlineHelpText>Please enter a number from 1-5</inlineHelpText>
        <label>Post-Visit Follow-Up Overall Score</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Call_Planning_Overall_Score__c</fullName>
        <description>Please enter a number from 1-5</description>
        <inlineHelpText>Please enter a number from 1-5</inlineHelpText>
        <label>Pre-Call Planning Overall Score</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Meeting_Agenda_Sent_and_entered_SF__c</fullName>
        <description>Did the RAE send a pre-meeting agenda to the client and enter it into Salesforce?</description>
        <inlineHelpText>Did the RAE send a pre-meeting agenda to the client and enter it into Salesforce?</inlineHelpText>
        <label>Pre-Meeting Agenda Sent - Entered in SF</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Account Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Joint_Coaching_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Development_Areas__c</fullName>
        <label>Sales Development Areas</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Strengths__c</fullName>
        <label>Sales Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>School_Call_Management_Overall_Score__c</fullName>
        <description>Please enter a number from 1-5</description>
        <inlineHelpText>Please enter a number from 1-5</inlineHelpText>
        <label>School Call Management Overall Score</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>School Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Joint Coaching Form</relationshipLabel>
        <relationshipName>Joint_Coaching_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Was_the_RAE_able_to_control_the_call__c</fullName>
        <label>Was the RAE able to control the call?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Joint Coaching Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>District_Manager__c</columns>
        <columns>Regional_Account_Executive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Julie_s_View</fullName>
        <columns>NAME</columns>
        <columns>District_Manager__c</columns>
        <columns>Regional_Account_Executive__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>District_Manager__c</field>
            <operation>equals</operation>
            <value>Julie Esau</value>
        </filters>
        <label>Julie&apos;s View</label>
        <sharedTo/>
    </listViews>
    <nameField>
        <label>Joint Coaching Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Joint Coaching Form</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>